# async_architecture

./: .gitignore  Makefile  README.md  pyproject.toml  schema_registry.py
accounting/: Makefile  pyproject.toml
accounting/src/: config.py  consumer.py  main.py  producer.py  scheduler.py  schemas.py  utils.py
accounting/src/db/: base.py  models.py
auth/: Makefile  pyproject.toml
auth/src/: config.py  main.py  producer.py  schemas.py  utils.py
auth/src/db/: base.py  models.py
event_schemas/payments/paid/: 1.json
event_schemas/payments/sent/: 1.json
event_schemas/tasks/added/: 1.json
event_schemas/tasks/assigned/: 1.json
event_schemas/tasks/completed/: 1.json
event_schemas/tasks/created/: 1.json  2.json
event_schemas/tasks/updated/: 1.json
event_schemas/users/created/: 1.json
event_schemas/users/role_changed/: 1.json
event_schemas/users/updated/: 1.json
task-manager/: Makefile  pyproject.toml
task-manager/src/: config.py  consumer.py  exceptions.py  main.py  producer.py  schemas.py  utils.py
task-manager/src/db/: base.py  models.py
